--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/coworkers.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/sri-vadivelan-stores-ad6-orig-1400x2167.jpg"></div>
                         </div>
 
                     </div>
