create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/jumbotron.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/jumbotron.jpg);">
 
     
 
@@ -143,7 +143,7 @@
                                 <p>OUR SHOWROOM SRI VADIVELAN STORES IS LOCATED IN AVALURPET MAIN ROAD, THIRUVANNAMALAI. NEARBY TO ULAGAMAPURAM VELLAN CHETTIYAR MARRIAGE HALL AND OPPOSITE TO DURGA SAW MILL. OUR SHOWROOM IS CONSTRUCTED NEARBY TO THE CENTRAL BUS TERMINAL. HENCE, YOU CAN REACH QUICKLY BY A SHORT WALK. OUR SHOWROOM INCLUDES GROUND FLOOR, FIRST FLOOR AND SECOND FLOOR (ON CONSTRUCTION). ITS A VAST, NEAT, CLEAN AND AIRY ENVIRONMENT WITH SPECTACULAR DISPLAYS OF PRODUCTS WHICH WILL BE VERY EASIER FOR OUR CUSTOMERS TO CHOOSE THEIR DESIRED PRODUCTS.<br>            EACH AND EVERY ITEMS DISPLAYED SO CLEARLY AND WITH THE LOWEST PRICE MENTIONED SO CLEARLY ON IT. SO THAT WE MAKE THE SHOPPING SO EASIER TO OUR CUSTOMERS. <br>            A BEST SHOWROOM IN THIRUVANNAMALAI FOR PURCHASING MARRIAGE GIFTS FOR BRIDAL AND ELECTRONICS, FURNITURE ITEMS AND OTHER HOME APPLIANCES.<br>            WE PROVIDE STAINLESS STEEL, BRASS, COPPER AND ALUMINIUM VESSELS FOR HOME NEEDS AND ALSO FOR HOTELS AND CATERING SERVICE. WE PROVIDE ALL TEMPLE WARE ITEMS. PLASTIC ITEMS LIKE TABLES, CHAIRS ARE AVAILABLE WITH US IN SUPERIOR QUALITY FROM THE LEADING MANUFACTURERS.<br>            FURNITURE ITEMS LIKE WOODEN CUPBOARDS, WOODEN COT, TV STAND, DRESSING TABLE, OFFICE TABLE ARE AVAILABLE IN DIFFERENT SIZES AND RANGES. STEEL FURNITURES LIKE COT, BEROW ARE ALSO AVAILABLE WITH US FROM THE LEADING MANUFACTURERS.<br>            HOME APPLIANCES LIKE WATER HEATER, IRON BOX, ELECTRIC RICE COOKERS, ELECTRIC KETTLES, WET GRINDER, MIXER GRINDER, INDUCTION STOVES, REFRIGERATOR, WASHING MACHINE, TABLE FAN, CEILING FANS, PEDESTAL FAN ARE AVAILABLE WITH US.<br>            KITCHEN NEED COOKERY ITEMS LIKE PRESSURE COOKER, PRESSURE PAN, GAS STOVE, KEROSENE STOVE, JAR, TUMBLERS, SPOONS AND CONTAINERS ARE AVAILABLE WITH US IN WIDE RANGE.<br></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-lg btn-black-outline btn-black" href="https://mobirise.com">OUR SHOWROOM DETAILS</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-lg btn-black-outline btn-black" href="page1.html">OUR SHOWROOM DETAILS</a></div>
 
                         </div>
 
