create github pages

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" class="" data-slide-to="6"></li>
+                    <li data-app-prevent-settings="" data-target="#slider3-c" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/8100428-orig-2000x1588.jpg);">
