--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-c" class="" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li>
+                    <li data-app-prevent-settings="" data-target="#slider3-c" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
-                    <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/1325437-orig-2000x1587.jpg);">
+                    <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/quality-banner1-2000x693.jpg);">
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide container">
