create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -293,7 +293,7 @@
                         <h4 class="card-title">Kitchen Utensils</h4>
                         <h5 class="card-subtitle"></h5>
                         <p class="card-text">We sell all types of kitchen utensils used for cooking and storage purposes. We sell Stainless steel, Brass, Copper vessels</p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="http://srivadivelanstores.co.nr/products" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -306,7 +306,7 @@
                         <h4 class="card-title">Funiture Items</h4>
                         <h5 class="card-subtitle"></h5>
                         <p class="card-text">We sell major wooden and iron furniture items like Wooden Cot, Wooden Beero, Iron Cot, Iron Beerow, Office Tables, Sofa sets and many more</p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="http://srivadivelanstores.co.nr/products" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -319,7 +319,7 @@
                         <h4 class="card-title">Appliances</h4>
                         <h5 class="card-subtitle"></h5>
                         <p class="card-text">We sell all types of Kitchen Appliances like Pressure Cookers, Pressure Pan, Non Stick Cookwares, LPG Stoves, Mixer Grinder, Wet Grinder and many more</p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="http://srivadivelanstores.co.nr/products" class="btn btn-primary" target="_blank">MORE</a></div>
                     </div>
                 </div>
             </div>
